--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^11.5.7",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.5.2",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
@@ -53,12 +54,14 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-map-gl": "^7.1.7",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
