--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/google-genai": "^1.21.0",
+    "@genkit-ai/next": "^1.21.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -44,7 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.5.7",
-    "genkit": "^1.14.1",
+    "genkit": "^1.21.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.5.2",
@@ -67,7 +67,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.14.1",
+    "genkit-cli": "^1.21.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
