Try fixing this error: `Build Error: Module not found: Can't resolve 'gs

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^11.5.7",
     "genkit": "^1.21.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.5.2",
     "next": "15.3.3",
