--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.5.2",
-    "next": "15.3.3",
+    "next": "^15.5.6",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
